// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSlotDetail Displays details when showDetails is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      Something
      <div
        class="time-slot-details"
      >
        0 issues
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        <span
          aria-describedby="badge-200624-614"
          currentitem="false"
          data-event="focus mouseenter"
          data-event-off="keydown mouseleave"
          data-for="badge-200624-614"
          data-tip="true"
          role="tooltip"
          tabindex="0"
        >
          <span
            aria-label="Hearing Request"
            data-css-2moai0=""
          >
            H
          </span>
        </span>
        <span
          data-css-1ediyry=""
        >
          <div
            class="__react_component_tooltip place-bottom type-dark "
            data-id="tooltip"
            id="badge-200624-614"
          >
            Hearing Request
          </div>
        </span>
         
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        AMERICAN LEGION
      </div>
    </div>
  </body>,
  "container": <div>
    Something
    <div
      class="time-slot-details"
    >
      0 issues
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      <span
        aria-describedby="badge-200624-614"
        currentitem="false"
        data-event="focus mouseenter"
        data-event-off="keydown mouseleave"
        data-for="badge-200624-614"
        data-tip="true"
        role="tooltip"
        tabindex="0"
      >
        <span
          aria-label="Hearing Request"
          data-css-2moai0=""
        >
          H
        </span>
      </span>
      <span
        data-css-1ediyry=""
      >
        <div
          class="__react_component_tooltip place-bottom type-dark "
          data-id="tooltip"
          id="badge-200624-614"
        >
          Hearing Request
        </div>
      </span>
       
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      AMERICAN LEGION
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSlotDetail Displays hearing info and details when showType and showDetails are true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      Something
      <div
        class="time-slot-details"
      >
        0 issues
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        <span
          aria-describedby="badge-200624-614"
          currentitem="false"
          data-event="focus mouseenter"
          data-event-off="keydown mouseleave"
          data-for="badge-200624-614"
          data-tip="true"
          role="tooltip"
          tabindex="0"
        >
          <span
            aria-label="Hearing Request"
            data-css-2moai0=""
          >
            H
          </span>
        </span>
        <span
          data-css-1ediyry=""
        >
          <div
            class="__react_component_tooltip place-bottom type-dark "
            data-id="tooltip"
            id="badge-200624-614"
          >
            Hearing Request
          </div>
        </span>
         
        200624-614
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        AMERICAN LEGION
      </div>
      <div
        class="time-slot-details"
      >
        <span>
          Original
        </span>
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        <span>
          Video
        </span>
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        <a
          href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c4/?hearingDate=2020-08-15&regionalOffice=RO17"
          id="0bf0263c-d863-4405-9b2e-f55cff77c6c4"
        >
          View Case Details
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    Something
    <div
      class="time-slot-details"
    >
      0 issues
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      <span
        aria-describedby="badge-200624-614"
        currentitem="false"
        data-event="focus mouseenter"
        data-event-off="keydown mouseleave"
        data-for="badge-200624-614"
        data-tip="true"
        role="tooltip"
        tabindex="0"
      >
        <span
          aria-label="Hearing Request"
          data-css-2moai0=""
        >
          H
        </span>
      </span>
      <span
        data-css-1ediyry=""
      >
        <div
          class="__react_component_tooltip place-bottom type-dark "
          data-id="tooltip"
          id="badge-200624-614"
        >
          Hearing Request
        </div>
      </span>
       
      200624-614
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      AMERICAN LEGION
    </div>
    <div
      class="time-slot-details"
    >
      <span>
        Original
      </span>
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      <span>
        Video
      </span>
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      <a
        href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c4/?hearingDate=2020-08-15&regionalOffice=RO17"
        id="0bf0263c-d863-4405-9b2e-f55cff77c6c4"
      >
        View Case Details
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSlotDetail Displays hearing info when showType is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      Something
      <div
        class="time-slot-details"
      >
        <span>
          Original
        </span>
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        <span>
          Video
        </span>
         
        <span
          style="margin: 0px 0px;"
        >
          ·
        </span>
         
        <a
          href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c4/?hearingDate=2020-08-15&regionalOffice=RO17"
          id="0bf0263c-d863-4405-9b2e-f55cff77c6c4"
        >
          View Case Details
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    Something
    <div
      class="time-slot-details"
    >
      <span>
        Original
      </span>
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      <span>
        Video
      </span>
       
      <span
        style="margin: 0px 0px;"
      >
        ·
      </span>
       
      <a
        href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c4/?hearingDate=2020-08-15&regionalOffice=RO17"
        id="0bf0263c-d863-4405-9b2e-f55cff77c6c4"
      >
        View Case Details
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSlotDetail Matches snapshot with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      Something
    </div>
  </body>,
  "container": <div>
    Something
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
